--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,__tests__}/**/*.ts\" --fix",
     "test:unit": "node --expose-gc --max-old-space-size=4096 ./node_modules/.bin/jest --config ./jest.unit.json --no-cache --logHeapUsage",
     "test:integration": "node --expose-gc --max-old-space-size=4096 ./node_modules/.bin/jest --config ./jest.integration.json --no-cache --logHeapUsage",
     "test:watch": "jest --watch",
