--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "engines": {
     "npm": ">=8.0.0 <9.0.0",
-    "node": ">=18.0.0"
+    "node": ">=16.0.0 <19.0.0"
   },
   "scripts": {
     "prebuild": "rimraf dist",
